Add left menu (WIP)

--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -14,8 +14,8 @@
 
   <body data-scrollbar-auto-hide="n" class="hold-transition sidebar-mini layout-navbar-fixed">
     <div class="wrapper" id="application">
-      <%= render "admin/base/header" %>
-      <%= render "admin/base/left_sidebar_menu"%>
+      <%= render "user/base/header" %>
+      <%= render "user/base/left_sidebar_menu"%>
       <div class="content-wrapper pt-2">
         <div class="content container-fluid">
           <div class="container-fluid" >
