--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -1,1 +1,1 @@
-<home-index :notices="{{$notices}}" :admin_status="active"></home-index>
+<home-index :notices="<%= @notices.to_json %>" admin_status="active"></home-index>
