--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -21,8 +21,8 @@
         <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fas fa-users"></i><p>友達一覧</p>'.html_safe,
-              user_line_friends_path,
-              class: "nav-link #{controller?("user/line_friends") ? 'active' : ''}"
+              user_friends_path,
+              class: "nav-link #{controller?("user/friends") ? 'active' : ''}"
             %>
           </li>
         </ul>
