Update friend detail page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "admin-lte";
 @import "toastr/build/toastr";
+@import "bootstrap-vue/dist/bootstrap-vue.css";
 @import "./linebot.css";
 a.sort_link {
   color: #212529;
