--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -1,1 +1,56 @@
-TODO
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <%= link_to new_user_broadcast_path do %>
+          <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> 新規作成</button>
+        <% end %>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-bordered table-striped">
+          <%# Header %>
+            <thead>
+              <tr>
+                <th width="5%"><%= sort_link(@q, :id, 'ID', default_order: :desc) %></th>
+                <th width="15%"><%= sort_link(@q, :deliver_at, '配信日時', default_order: :desc) %></th>
+                <th width="30%">タイトル</th>
+                <th width="25%">配信先</th>
+                <th width="10%">状況</th>
+                <th width="15%"></th>
+              </tr>
+            </thead>
+            <%# Data %>
+            <tbody>
+              <% @broadcasts.each do |broadcast| %>
+                <tr>
+                  <td><%= link_to broadcast.id, user_broadcast_path(broadcast) %></td>
+                  <td>
+                    <%= broadcast.deliver_at&.strftime('%Y-%m-%d %H:%M') %>
+                  </td>
+                  <td><%= broadcast.title %></td>
+                  <td>全て</td>
+                  <td>
+                    <%= render_broadcast_status(broadcast.status).html_safe %>
+                  </td>
+                  <td class="text-center">
+                    <%= link_to user_broadcast_path(broadcast), class: "btn btn-outline-success btn-sm mr-2" do %>
+                      <i class="fas fa-eye"></i> 詳細
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        <%# Pagination %>
+        <div class="d-flex justify-content-center mt-4">
+          <% if @broadcasts.size == 0 %>
+            <b>データはありません。</b>
+          <% end %>
+          <%= paginate @broadcasts %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
