--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,6 +10,14 @@
 @import "./slick/slick.css";
 @import "./slick/slick-theme.css";
 
+body {
+  font-family: Lucida Grande, Hiragino Kaku Gothic ProN,
+    "\30D2\30E9\30AE\30CE\89D2\30B4   ProN W3", Meiryo, "\30E1\30A4\30EA\30AA",
+    "sans-serif", Noto Color Emoji, Apple Color Emoji, Glyphicons Halflings,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Emoji !important;
+  font-size: 14px;
+}
+
 a.sort_link {
   color: #212529;
 }
@@ -29,9 +37,8 @@ td {
 
 // START: card view
 .card {
-  font-size: 14px !important;
-  .form-control {
-    font-size: 14px !important;
+  .left-border {
+    border-left: 4px solid #28a745;
   }
 }
 
