--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-header"> ;
+      <div class="card-header">
         <%= link_to new_user_broadcast_path do %>
           <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> 新規作成</button>
         <% end %>
@@ -37,8 +37,10 @@
                     <%= link_to user_broadcast_path(broadcast), class: "btn btn-outline-success btn-sm mr-2" do %>
                       <i class="fas fa-eye"></i> 詳細
                     <% end %>
-                    <%= link_to edit_user_broadcast_path(broadcast), class: "btn btn-outline-success btn-sm mr-2" do %>
-                      <i class="fas fa-pencil"></i> 編集
+                    <% if broadcast.editable? %>
+                      <%= link_to edit_user_broadcast_path(broadcast), class: "btn btn-outline-success btn-sm mr-2" do %>
+                        <i class="fas fa-pencil-alt"></i> 編集
+                      <% end %>
                     <% end %>
                   </td>
                 </tr>
