Change text color of message previewer

--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -33,7 +33,7 @@
                   <td>
                     <%= render_broadcast_status(broadcast.status).html_safe %>
                   </td>
-                  <td class="text-center">
+                  <td class="text-left">
                     <%= link_to user_broadcast_path(broadcast), class: "btn btn-outline-success btn-sm mr-2" do %>
                       <i class="fas fa-eye"></i> 詳細
                     <% end %>
