--- a/app/javascript/stylesheets/common.css
+++ b/app/javascript/stylesheets/common.css
@@ -1723,9 +1723,25 @@ select{
 }
 
 .nav-tabs > li > a {
-    line-height: 2 !important;
-    padding: 7px 10px !important;
+  padding: 7px 10px !important;
+  color: #337ab7 !important;
+}
 
+.nav-tabs>li.active {
+  margin-top: -2px;
+}
+
+.nav-tabs>li {
+  background-color: #f7f7f7;
+  border: 1px solid #e4e4e4;
+  border-bottom: none;
+  border-radius: 4px;
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  color: #555;
+  font-weight: 700;
+  border-top: 3px solid #069e04;
 }
 
 .float-left {
