--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -187,3 +187,21 @@ td {
   font-size: 12px !important;
 }
 // END: Tags
+
+.radio-group {
+  display: flex;
+  label {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    input {
+      margin-right: 4px;
+    }
+  }
+}
+
+.divider {
+  width: 100%;
+  height: 0px;
+  border-top: 2px dashed rgb(158, 151, 151);
+}
