Add scenario editor

--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.css" integrity="sha512-J5tsMaZISEmI+Ly68nBDiQyNW6vzBoUlNHGsH8T3DzHTn2h9swZqiMeGm/4WMDxAphi5LMZMNA30LvxaEPiPkg==" crossorigin="anonymous" />
   </head>
 
-  <body data-scrollbar-auto-hide="n" class="hold-transition sidebar-mini layout-navbar-fixed">
+  <body data-scrollbar-auto-hide="n" class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed text-sm" style="height: auto;">
     <div class="wrapper" id="application">
       <%= render "user/base/header" %>
       <%= render "user/base/left_sidebar_menu"%>
