--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,8 +10,25 @@
 @import "./slick/slick.css";
 @import "./slick/slick-theme.css";
 
-* {
-  font-size: 14px;
+// Override bootstrap
+.btn-success {
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+}
+
+.btn-group-xs > .btn,
+.btn-xs {
+  padding: 1px 5px;
+  font-size: 12px !important;
+  line-height: 1.5;
+  border-radius: 3px;
 }
 
 a.sort_link {
@@ -31,6 +48,22 @@ td {
   vertical-align: middle;
 }
 
+.table thead {
+  border-top: 2px solid #999;
+  background-color: #eee;
+}
+
+.table > tbody > tr > td,
+.table > tbody > tr > th,
+.table > tfoot > tr > td,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > thead > tr > th {
+  padding: 5px;
+  line-height: 1.4;
+  vertical-align: middle;
+  border-top: 1px solid #ddd;
+}
 // START: card view
 .card {
   .left-border {
@@ -203,5 +236,5 @@ td {
 .divider {
   width: 100%;
   height: 0px;
-  border-top: 2px dashed rgb(158, 151, 151);
+  border-top: 1px dashed rgb(158, 151, 151);
 }
