--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -1,14 +1,14 @@
-  <aside class="main-sidebar sidebar-dark-secondary elevation-4 nav-fixed">
+  <aside class="main-sidebar elevation-4 sidebar-light-success">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link bg-white elevation-4 text-center">
-      <span class="brand-text font-weight-bold text-danger">LINE MONSTER</span>
+    <a href="index3.html" class="brand-link navbar-success">
+      <span class="text-white brand-text font-weight-bold">LINE MONSTER</span>
     </a>
 
     <!-- Sidebar -->
-    <div class="sidebar left-sidebar__scroll">
+    <div class="sidebar">
       <!-- Sidebar Menu -->
       <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fas fa-home"></i><p>ホーム</p>'.html_safe,
               user_root_path,
@@ -18,7 +18,7 @@
         </ul>
 
         <!-- Friend List -->
-        <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fas fa-users"></i><p>友達一覧</p>'.html_safe,
               user_friends_path,
@@ -28,7 +28,7 @@
         </ul>
 
         <!-- Broadcast List -->
-        <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fa fa-paper-plane"></i><p>一斉配信</p>'.html_safe,
               user_broadcasts_path,
@@ -37,8 +37,18 @@
           </li>
         </ul>
 
+        <!-- Scenario List -->
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <li class="nav-item">
+            <%= link_to '<i class="nav-icon fa fa-paper-plane"></i><p>シナリオ配信</p>'.html_safe,
+              user_scenarios_path,
+              class: "nav-link #{controller?("user/scenarios", "user/scenario_messages") ? 'active' : ''}"
+            %>
+          </li>
+        </ul>
+
         <!-- Tag Management -->
-        <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fas fa-tag"></i><p>タグ管理</p>'.html_safe,
               user_tags_path,
@@ -48,7 +58,7 @@
         </ul>
 
         <!-- Account Setting -->
-        <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
             <%= link_to '<i class="nav-icon fas fa-home"></i><p>アカウント設定</p>'.html_safe,
               user_setting_index_path,
