--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -24,10 +24,10 @@
               <% @scenarios.each do |scenario| %>
                 <tr>
                   <td><%= scenario.title %></td>
-                  <td><%= scenario.mode_i18n %></td>
+                  <td class="text-center"><%= scenario.mode_i18n %></td>
                   <td class="text-center"><%= render_scenario_status(scenario.status).html_safe %></td>
                   <td>0</td>
-                  <td>
+                  <td class="text-center">
                     <%= link_to edit_user_scenario_path(scenario), class: "btn btn-primary btn-xs mr-2" do %>
                       基本設定
                     <% end %>
