--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -1,1 +1,42 @@
-xxxx
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <%= link_to new_user_scenario_message_path do %>
+          <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> メッセージを追加</button>
+        <% end %>
+        <button type="button" class="btn btn-primary mr-2"><i class="fa fa-plus"></i> テンプレートを追加</button>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-bordered table-striped">
+          <%# Header %>
+            <thead>
+              <tr>
+                <th width="20%">日数</th>
+                <th width="15%">時刻</th>
+                <th width="10%">メッセージプレビュー</th>
+                <th width="15%">操作</th>
+              </tr>
+            </thead>
+            <%# Data %>
+            <tbody>
+              <% @messages.each do |message| %>
+                <tr>
+                  <td><%= message.id %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        <%# Pagination %>
+        <div class="d-flex justify-content-center mt-4">
+          <% if @messages.size == 0 %>
+            <b>データはありません。</b>
+          <% end %>
+          <%= paginate @messages %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
