--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,6 +10,13 @@
 @import "./slick/slick.css";
 @import "./slick/slick-theme.css";
 
+* {
+  font-family: "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "游ゴシック",
+    "游ゴシック体", YuGothic, "Yu Gothic", "メイリオ", Meiryo, "ＭＳ ゴシック",
+    "MS Gothic", HiraKakuProN-W3, "TakaoExゴシック", TakaoExGothic,
+    "MotoyaLCedar", "Droid Sans Japanese", sans-serif;
+}
+
 // Override bootstrap
 .btn-success {
   color: #fff;
@@ -21,6 +28,12 @@
   color: #fff;
   background-color: #337ab7;
   border-color: #2e6da4;
+}
+
+.btn-warning {
+  border-color: #cc8521;
+  background: #d18f32;
+  color: #ffffff;
 }
 
 .btn-group-xs > .btn,
@@ -48,9 +61,11 @@ td {
   vertical-align: middle;
 }
 
-.table thead {
-  border-top: 2px solid #999;
-  background-color: #eee;
+.index {
+  thead {
+    border-top: 2px solid #999;
+    background-color: #eee;
+  }
 }
 
 .table > tbody > tr > td,
@@ -69,11 +84,6 @@ td {
   .left-border {
     border-left: 4px solid #28a745;
   }
-}
-
-// Override default style
-.content-wrapper {
-  background: white !important;
 }
 
 .header-title {
@@ -179,6 +189,10 @@ td {
   }
 }
 
+.mw-1200 {
+  max-width: 1200px;
+}
+
 .text-c {
   text-align: center;
   text-align: -webkit-center;
@@ -237,4 +251,17 @@ td {
   width: 100%;
   height: 0px;
   border-top: 1px dashed rgb(158, 151, 151);
+}
+
+// Datetime picker theme
+.theme-success .vdatetime-popup__header,
+.theme-success .vdatetime-calendar__month__day--selected > span > span,
+.theme-success .vdatetime-calendar__month__day--selected:hover > span > span {
+  background: #28a745;
+}
+
+.theme-success .vdatetime-year-picker__item--selected,
+.theme-success .vdatetime-time-picker__item--selected,
+.theme-success .vdatetime-popup__actions__button {
+  color: #28a745;
 }
