--- a/app/views/user/broadcasts/index.html.erb
+++ b/app/views/user/broadcasts/index.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table table-bordered table-striped">
+          <table class="table table-bordered table-striped index">
           <%# Header %>
             <thead>
               <tr>
