Fix table styles

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -68,13 +68,7 @@ td {
   }
 }
 
-.table > tbody > tr > td,
-.table > tbody > tr > th,
-.table > tfoot > tr > td,
-.table > tfoot > tr > th,
-.table > thead > tr > td,
-.table > thead > tr > th {
-  padding: 5px;
+.table > tbody > tr > td {
   line-height: 1.4;
   vertical-align: middle;
   border-top: 1px solid #ddd;
