--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -12,11 +12,11 @@
           <%# Header %>
             <thead>
               <tr>
-                <th width="20%">シナリオ名</th>
-                <th width="15%">配信方式</th>
-                <th width="10%">状況</th>
-                <th width="10%">メッセージ数</th>
-                <th width="15%">設定</th>
+                <th class="mw-200">シナリオ名</th>
+                <th class="mw-120">配信方式</th>
+                <th class="mw-100">状況</th>
+                <th class="mw-120">メッセージ数</th>
+                <th class="mw-300">設定</th>
               </tr>
             </thead>
             <%# Data %>
@@ -24,10 +24,10 @@
               <% @scenarios.each do |scenario| %>
                 <tr>
                   <td><%= scenario.title %></td>
-                  <td class="text-center"><%= scenario.mode_i18n %></td>
-                  <td class="text-center"><%= render_scenario_status(scenario.status).html_safe %></td>
+                  <td><%= scenario.mode_i18n %></td>
+                  <td><%= render_scenario_status(scenario.status).html_safe %></td>
                   <td>0</td>
-                  <td class="text-center">
+                  <td>
                     <%= link_to edit_user_scenario_path(scenario), class: "btn btn-primary btn-xs mr-2" do %>
                       基本設定
                     <% end %>
