--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -28,8 +28,8 @@
                   <td><%= render_scenario_status(scenario.status).html_safe %></td>
                   <td><%= scenario.scenario_messages_count %></td>
                   <td>
-                    <%= link_to edit_user_scenario_path(scenario), class: "btn btn-primary btn-xs mr-2" do %>
-                      基本設定
+                    <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs mr-2" do %>
+                      編集
                     <% end %>
                     <%= link_to user_scenario_messages_path(scenario), class: "btn btn-primary btn-xs mr-2" do %>
                       配信文設定
