Delete scenario function

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -36,6 +36,12 @@
   color: #ffffff;
 }
 
+.btn-danger {
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+
 .btn-group-xs > .btn,
 .btn-xs {
   padding: 1px 5px;
