--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -28,12 +28,13 @@
                   <td><%= render_scenario_status(scenario.status).html_safe %></td>
                   <td><%= scenario.scenario_messages_count %></td>
                   <td>
-                    <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs mr-2" do %>
+                    <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs mr-1" do %>
                       編集
                     <% end %>
-                    <%= link_to user_scenario_messages_path(scenario), class: "btn btn-primary btn-xs mr-2" do %>
+                    <%= link_to user_scenario_messages_path(scenario), class: "btn btn-primary btn-xs mr-1" do %>
                       配信文設定
                     <% end %>
+                    <%= link_to '削除', delete_confirm_user_scenario_path(scenario), remote: true, class: "btn btn-danger btn-xs" %>
                   </td>
                 </tr>
               <% end %>
@@ -51,3 +52,5 @@
     </div>
   </div>
 </div>
+
+<div id='confirmDelContent'></div>
