--- a/app/views/user/channels/index.html.erb
+++ b/app/views/user/channels/index.html.erb
@@ -1,1 +1,1 @@
-<channel-index channels="<%= raw render(template: 'user/channels/index_success.json') %>"></channel-index>
+<channel-index></channel-index>
