Feature/implement edit settings screen (#3)
* Implement edit settings screen

* Pending to investigate the error

* Update vee-validate request on submit form

* Refactor the code in the leader's comment

--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -38,7 +38,9 @@
       </table>
     </div>
     <div class="card-footer d-flex">
-      <div class="btn btn-success btm-sm m-auto">編集</div>
+      <%= link_to edit_user_setting_index_path, class: "btn btn-success btm-sm m-auto" do %>
+        編集
+      <% end %>
     </div>
   </div>
 </div>
