Style fixes on setting page

--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -4,7 +4,7 @@
       <h5 class="m-auto font-weight-bold">アカウント情報</h5>
     </div>
     <div class="card-body">
-      <table class="table table-bordered text-left">
+      <table class="table">
         <tbody>
           <tr>
             <th class="fw-300">表示名</th>
@@ -38,7 +38,7 @@
       </table>
     </div>
     <div class="card-footer d-flex">
-      <%= link_to edit_user_setting_index_path, class: "btn btn-success btm-sm m-auto" do %>
+      <%= link_to edit_user_setting_index_path, class: "btn btn-success btm-sm m-auto fw-120" do %>
         編集
       <% end %>
     </div>
