Allow delete tag on tag index

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -52,6 +52,12 @@
   border-radius: 3px;
 }
 
+.btn-group {
+  button {
+    padding: 2px 5px !important;
+  }
+}
+
 a.sort_link {
   color: #212529;
 }
